<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/description_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@+id/card_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image_indicator"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/indicator_movie"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"
            android:text="@string/description_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reasled_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:padding="5dp"
            android:drawableStart="@drawable/usa"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toEndOf="@+id/image_indicator"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/indicator_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:srcCompat="@drawable/ic_date_release" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/indicator_dollar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reasled_date"
            app:srcCompat="@drawable/dollar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="5dp"
            android:text="@string/budget"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/reasled_date" />

        <TextView
            android:id="@+id/budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/money_info"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/reasled_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>